# opencv_helloworld

./: CMakeLists.txt  README.md
src/: opencv_helloworld.cpp
